# plates

./: .gitignore  LICENSE  README.md  build.sh  ccpiatti  ccpiatti.sh  codegen.cpp  cpiatti.c  cpiatti.cpp  cpiatti.h  cpiatti.hpp  cpiattict  cpiattict.c  cpiattict.py  header.c  header.h  lex.yy.c  main.cpp  makefile  meson.build  out.c  piatti.c  piatti.cpp  piattict  test.piatti  transpiler.l  windows-cross.ini
examples/: fib.piatti  test.piatti  truth.piatti  upper.piatti
inc/: codegen.hpp  cpiatti.hpp  define.hpp  piatti.hpp  vmpiatti.hpp
src/: codegen.cpp  cpiatti.cpp  main.cpp  vmpiatti.cpp
